# Makefile for CMConvert
# Copyright 2003-2005 Brian Smith (brian@smittyware.com)

# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA

bin_PROGRAMS = cmconvert
cmconvert_SOURCES = main.cpp wplist.cpp parser.cpp pdbwriter.cpp getopt.c \
	getopt1.c reader.cpp htmlwriter.cpp util.cpp mktime.cpp
DISTCLEANFILES = cmconvert-stdint.h
BUILT_SOURCES = cmconvert-stdint.h
